--- a/skribble-connector/pom.xml
+++ b/skribble-connector/pom.xml
@@ -16,4 +16,19 @@
       </plugin>
     </plugins>
   </build>
+  <repositories><repository>
+	<id>maven.axonivy.com</id>
+	<url>https://maven.axonivy.com</url>
+	<snapshots>
+		<enabled>true</enabled>
+	</snapshots>
+</repository></repositories>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.axonivy.connector.openai</groupId>
+  		<artifactId>openai-connector</artifactId>
+  		<version>10.0.15</version>
+  		<type>iar</type>
+  	</dependency>
+  </dependencies>
 </project>
