--- a/skribble-connectorTest/pom.xml
+++ b/skribble-connectorTest/pom.xml
@@ -6,7 +6,28 @@
   <artifactId>skribble-connector-test</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>iar</packaging>
+  <dependencies>
+    <dependency>
+      <groupId>com.axonivy.connector.skribble</groupId>
+      <artifactId>skribble-connector</artifactId>
+      <version>${project.version}</version>
+      <type>iar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.axonivy.ivy.test</groupId>
+      <artifactId>unit-tester</artifactId>
+      <version>10.0.16</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.axonivy.connector.skribble</groupId>
+      <artifactId>skribble-connector-demo</artifactId>
+      <version>${project.version}</version>
+      <type>iar</type>
+    </dependency>
+  </dependencies>
   <build>
+    <testSourceDirectory>src_test</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
