rename project test

--- a/skribble-connector-test/.project
+++ b/skribble-connector-test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>skribble-connectorTest</name>
+	<name>skribble-connector-test</name>
 	<comment></comment>
 	<projects>
 	</projects>
