--- a/skribble-connector/config/rest-clients.yaml
+++ b/skribble-connector/config/rest-clients.yaml
@@ -4,7 +4,7 @@ RestClients:
   #https://api.skribble.com/v2
   Skribble:
     UUID: 6c92d3d7-cb33-4cfa-964a-8242ad165742
-    Url: https://api.skribble.com/v2
+    Url: https://api.skribble.com
     Icon: res:/webContent/logo/logo.png
     Features:
     - ch.ivyteam.ivy.rest.client.mapper.JsonFeature
@@ -12,13 +12,7 @@ RestClients:
     Properties:
       AUTH.username: ${ivy.var.skribbleConnector.username}
       AUTH.key: ${ivy.var.skribbleConnector.authKey}
-      AUTH.sessionToken: ${ivy.var.skribbleConnector.sessionToken}
       JSON.Serialization.PROPERTY_INCLUSION: NON_NULL
     OpenAPI:
       SpecUrl: C:/Users/jh/git/skribble-connector/skribble-connector/src/com/skribble/openapi/openapi.json
       Namespace: com.skribble.api.v2.client
-  SkribbleHealth:
-    UUID: 828adc47-4f88-4460-8330-af540209cf36
-    Url: https://api.skribble.com/
-    Features:
-    - ch.ivyteam.ivy.rest.client.mapper.JsonFeature
