--- a/skribble-connector/pom.xml
+++ b/skribble-connector/pom.xml
@@ -24,11 +24,10 @@
 	</snapshots>
 </repository></repositories>
   <dependencies>
-  	<dependency>
-  		<groupId>com.axonivy.connector.openai</groupId>
-  		<artifactId>openai-connector</artifactId>
-  		<version>10.0.15</version>
-  		<type>iar</type>
-  	</dependency>
+	<dependency>
+	    <groupId>com.auth0</groupId>
+	    <artifactId>java-jwt</artifactId>
+	    <version>4.4.0</version>
+	</dependency>
   </dependencies>
 </project>
