--- a/skribble-connector-demo/pom.xml
+++ b/skribble-connector-demo/pom.xml
@@ -6,6 +6,9 @@
   <artifactId>skribble-connector-demo</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>iar</packaging>
+  <properties>
+  	<project.build.plugin.version>10.0.14</project.build.plugin.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>com.axonivy.connector.skribble</groupId>
@@ -19,7 +22,7 @@
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
-        <version>10.0.14</version>
+        <version>${project.build.plugin.version}</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
