--- a/skribble-connector-test/pom.xml
+++ b/skribble-connector-test/pom.xml
@@ -6,6 +6,9 @@
   <artifactId>skribble-connector-test</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>iar</packaging>
+  <properties>
+  	<tester.version>10.0.16</tester.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>com.axonivy.connector.skribble</groupId>
@@ -32,7 +35,7 @@
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
-        <version>10.0.14</version>
+        <version>${tester.version}</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
