--- a/skribble-connector/pom.xml
+++ b/skribble-connector/pom.xml
@@ -6,12 +6,15 @@
   <artifactId>skribble-connector</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>iar</packaging>
+  <properties>
+  	<project.build.plugin.version>10.0.14</project.build.plugin.version>
+  </properties>
   <build>
     <plugins>
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
-        <version>10.0.14</version>
+        <version>${project.build.plugin.version}</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
