--- a/skribble-connector-test/pom.xml
+++ b/skribble-connector-test/pom.xml
@@ -29,6 +29,16 @@
       <type>iar</type>
     </dependency>
   </dependencies>
+  <pluginRepositories>
+    <!-- Snapshot releases are available via sonatype.org -->
+    <pluginRepository>
+      <id>sonatype</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <snapshots>
+        <updatePolicy>always</updatePolicy>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>  
   <build>
     <testSourceDirectory>src_test</testSourceDirectory>
     <plugins>
