--- a/skribble-connector/pom.xml
+++ b/skribble-connector/pom.xml
@@ -33,4 +33,14 @@
 	    <version>4.4.0</version>
 	</dependency>
   </dependencies>
+  <pluginRepositories>
+    <!-- Snapshot releases are available via sonatype.org -->
+    <pluginRepository>
+      <id>sonatype</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <snapshots>
+        <updatePolicy>always</updatePolicy>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>  
 </project>
