--- a/skribble-connector-test/pom.xml
+++ b/skribble-connector-test/pom.xml
@@ -31,7 +31,6 @@
     </dependency>
   </dependencies>
   <pluginRepositories>
-    <!-- Snapshot releases are available via sonatype.org -->
     <pluginRepository>
       <id>sonatype</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
@@ -39,7 +38,16 @@
         <updatePolicy>always</updatePolicy>
       </snapshots>
     </pluginRepository>
-  </pluginRepositories>  
+  </pluginRepositories>
+  <repositories>
+    <repository>
+      <id>sonatype</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <snapshots>
+        <updatePolicy>always</updatePolicy>
+      </snapshots>
+    </repository>
+  </repositories>
   <build>
     <testSourceDirectory>src_test</testSourceDirectory>
     <plugins>
