--- a/skribble-connector/config/variables.yaml
+++ b/skribble-connector/config/variables.yaml
@@ -6,7 +6,7 @@ Variables:
   #set all paramaters for Skribble-connector
   skribbleConnector:
     #username
-    username: 'api_demo_axonivy_e989_0'
+    username: ''
     #apikey
     #[password]
     authKey: ''
